<resources>
    <string name="app_name">SEP4-Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!--    Menu -->
    <string name="logout">Logout</string>
    <string name="remove_account">Remove account</string>
    <string name="nav_switch">Switch mode</string>
    <string name="login">Login</string>


    <!-- Main app -->
    <string name="settings">Settings</string>
    <string name="view_garden">View Garden</string>
    <string name="add_garden">Add Garden</string>
    <string name="remove_garden">Remove Garden</string>
    <string name="add_plant">Add Plant</string>
    <string name="no_garden_added">No garden added</string>
    <string name="main_title">GardenManager</string>
    <string name="main_sub_title">Manage your garden and check the status of plants anytime</string>

    <!-- Sign up -->
    <string name="gardener">Gardener</string>
    <string name="assistant">Assistant</string>

    <!-- Add garden form -->
    <string name="garden_name">Garden Name</string>
    <string name="garden_land_area">Land Area</string>
    <string name="garden_city">City</string>
    <string name="garden_street">Street</string>
    <string name="garden_street_number">Street Number</string>
    <string name="create_garden">Create garden</string>
    <string name="create_garden_description">Fill the form and enjoy your garden. This will allow you to manage all plants and add assistants.</string>

    <!-- Add plant form -->
    <string name="plant_garden_name">Garden Name</string>
    <string name="plant_height">Plant Height</string>
    <string name="plant_width">Plant Width</string>
    <string name="plant_growth_stage">Stage Of Growth</string>
    <string name="plant_soil_type">Soil Type</string>
    <string name="plant_soil_volume">Volume</string>
    <string name="plant_common_name">Common Plant Name</string>
    <string name="plant_category_name">Category Name</string>
    <string name="plant_garden_location">Garden location</string>
    <string name="plant_update">Update</string>
    <string name="add_plant_description">By adding a plant to the garden it will be possible to receive measurements related with it</string>

    <!--    Measurements-->
    <string name="light">light</string>
    <string name="co2">co2</string>
    <string name="humidity">humidity</string>
    <string name="temperature">temperature</string>

    <!--    Messages-->
    <string name="no_garden">First create garden!</string>
    <string name="empty_garden">No plant added to the selected garden.</string>
    <string name="success_garden">A new garden has been successfully created!</string>
    <string name="remove_plant">Plant has been successfully removed!</string>
    <string name="welcome">Welcome</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channed description</string>

    <!-- Data to display in the dialog box-->
    <string name="measurements">Measurements</string>
    <string name="no_data_text">Empty</string>
    <string name="statistics">Statistics</string>
    <string name="photo">Take a picture</string>

    <!-- Garden Info-->
    <string name="area">Area:</string>
    <string name="address">Address:</string>
    <string name="assistant_no">All assistants:</string>
    <string name="assistants">Assistants</string>
    <string name="notifications">Notifications</string>

    <!-- Empty field Garden-->
    <string name="empty_field_garden_name">Empty Garden Name Field</string>
    <string name="empty_field_garden_land">Empty Garden Land Field</string>
    <string name="empty_field_garden_street">Empty Garden Street Field</string>
    <string name="empty_field_garden_number">Empty Garden Number Field</string>
    <string name="empty_field_garden_city">Empty Garden City Field</string>

    <!-- Empty field Plant-->
    <string name="empty_field_plant_height">Empty Plant Height Field</string>
    <string name="empty_field_stage_growth">Empty Stage Growth Field</string>
    <string name="empty_field_soil_type">Empty Soil Type Field</string>
    <string name="empty_field_soil_volume">Empty Soil Volume Field</string>
    <string name="empty_field_common_plant_name">Empty Common Plant Name Field</string>
    <string name="empty_field_category_name">Empty Category Name Field</string>
    <string name="empty_field_common_garden_location">Empty Common Garden Location Field</string>

    <string name="settings_remove">Remove account</string>
    <string name="settings_synchronize">Synchronize data</string>
    <string name="settings_synchronize_summary">This action loads all your data which is stored on the sever</string>


    <string name="are_you_sure">Are you sure?</string>
    <string name="remove_garden_confirmation">This action will permanently delete the garden along with all plants.</string>
    <string name="remove_assistant">This action will remove the selected assistant from you garden.</string>
    <string name="connection_error">Connection error. Try again later</string>
    <string name="not_unique_name">There is a garden with the given name</string>
    <string name="default_role">Welcome in GardenManager app. Select your default role. It will be possible to change this choice later.</string>
    <string name="login_info">Log in using your google account or e-mail and start your adventure with comfortable garden management</string>
    <string name="action_success">The action was successfully performed</string>

    <string name="browse_gardens">Browse</string>
    <string name="my_gardens">My gardens</string>
    <string name="assistant_description">Browse the gardens you want to join and look after the gardens you are an assistant</string>
    <string name="waiting_for_approve">Waiting for approve</string>
    <string name="cancel">Cancel</string>
    <string name="remove_account_confirmation">This action will permanently remove the account and all related information.</string>
    <string name="send_request">Send request</string>
    <string name="empty_assistant_list">There are no assistants</string>
    <string name="view_plant">View plant</string>
    <string name="remove_plant_description">This action will permanently remove the selected plant</string>
    <string name="empty_chart">No data. Select the measurement</string>
    <string name="open_window">Open window</string>
    <string name="close_window">Close window</string>
    <string name="measurement_success">Measurements has been successfully loaded</string>
    <string name="measurements_error">Loading measurements error. Try again later</string>
    <string name="no_gardens">No gardens available</string>
    <string name="empty_field">Empty field</string>
</resources>