<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".views.mainapp.gardener.AddGardenFragment">


    <TextView
        android:id="@+id/add_garden"
        style="@style/title2"
        android:text="@string/create_garden"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        style="@style/sub_title"
        android:text="@string/create_garden_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_garden" />

    <LinearLayout
        android:id="@+id/garden_add_layout"
        style="@style/box_with_inputs"
        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <TextView
            android:id="@+id/text_garden_name"
            style="@style/input_title"
            android:text="@string/garden_name" />

        <EditText
            android:id="@+id/input_garden_name"
            style="@style/input"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/text_land_area"
            style="@style/input_title"
            android:text="@string/garden_land_area" />

        <EditText
            android:id="@+id/input_land_area"
            style="@style/input"
            android:inputType="number" />


        <TextView
            android:id="@+id/text_city"
            style="@style/input_title"
            android:text="@string/garden_city" />

        <EditText
            android:id="@+id/input_city"
            style="@style/input"
            android:layout_marginTop="4dp"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/text_street"
            style="@style/input_title"
            android:text="@string/garden_street" />

        <EditText
            android:id="@+id/input_street"
            style="@style/input"
            android:layout_marginTop="4dp"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/text_street_number"
            style="@style/input_title"
            android:text="@string/garden_street_number" />

        <EditText
            android:id="@+id/input_street_number"
            style="@style/input"
            android:layout_marginTop="4dp"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/button_add_garden"
            android:layout_marginTop="10dp"
            style="@style/select_button_dark"
            android:text="@string/add_garden"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/garden_add_layout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>