<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".views.mainapp.gardener.AddPlantFragment">

    <TextView
        android:id="@+id/textView9"
        style="@style/title2"
        android:text="@string/add_plant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        style="@style/sub_title"
        android:text="@string/add_plant_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


    <LinearLayout
        android:id="@+id/plant_add_layout"
        style="@style/box_with_inputs"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <TextView
            android:id="@+id/text_common_plant_name"
            style="@style/input_title"
            android:text="@string/plant_common_name" />

        <EditText
            android:id="@+id/input_common_plant_name"
            style="@style/input"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/text_plant_category_name"
            style="@style/input_title"
            android:text="@string/plant_category_name" />

        <EditText
            android:id="@+id/input_plant_category_name"
            style="@style/input"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/text_plant_garden_location"
            style="@style/input_title"
            android:text="@string/plant_garden_location" />

        <EditText
            android:id="@+id/input_plant_garden_location"
            style="@style/input"
            android:layout_marginTop="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_plant_height"
                    style="@style/input_title"
                    android:text="@string/plant_height" />

                <EditText
                    android:id="@+id/input_plant_height"
                    style="@style/input"
                    android:layout_marginTop="4dp"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_plant_soil_volume"
                    style="@style/input_title"
                    android:text="@string/plant_soil_volume" />

                <EditText
                    android:id="@+id/input_plant_soil_volume"
                    style="@style/input"
                    android:layout_marginTop="4dp"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/text_plant_stage_growth"
            style="@style/input_title"
            android:text="@string/plant_growth_stage" />

        <Spinner
            android:id="@+id/input_plant_stage_growth"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_plant_soil_type"
            style="@style/input_title"
            android:text="@string/plant_soil_type" />

        <Spinner
            android:id="@+id/input_plant_soil_type"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_add_plant"
            style="@style/select_button_dark"
            android:layout_marginTop="10dp"
            android:text="@string/add_plant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plant_add_layout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>