<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".views.login.SignUpFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="194dp">

        <TextView
            android:id="@+id/textView3"
            style="@style/title"
            android:layout_margin="0dp"
            android:text="@string/main_title" />

        <TextView
            android:id="@+id/textView4"
            style="@style/sub_title"
            android:text="@string/default_role" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"

            >

            <Button
                android:id="@+id/button_sign_up_gardener"
                style="@style/select_button"
                android:layout_margin="5dp"
                android:text="@string/gardener" />

            <Button
                android:id="@+id/button_sign_up_assistant"
                style="@style/select_button"
                android:layout_margin="5dp"
                android:text="@string/assistant" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>