<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".views.login.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="152dp">

        <TextView
            android:id="@+id/textView5"
            style="@style/title"
            android:layout_margin="0dp"
            android:text="@string/main_title" />

        <TextView
            android:id="@+id/textView7"
            style="@style/sub_title"
            android:text="@string/login_info" />

        <Button
            android:id="@+id/button_login"
            style="@style/select_button"
            android:layout_marginTop="30dp"
            android:text="@string/login" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>