<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".views.mainapp.assistant.AssistantHomepageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="145dp">

        <TextView
            android:id="@+id/textView11"
            style="@style/title"
            android:layout_margin="0dp"
            android:text="@string/main_title" />

        <TextView
            android:id="@+id/textView12"
            style="@style/sub_title"
            android:text="@string/assistant_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_assistant_browse"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="50"
                android:background="@drawable/rounded_bg"
                android:backgroundTint="@color/white">

                <ImageView
                    android:id="@+id/imageView55"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_baseline_format_list_numbered_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.476"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/contrast_green" />

                <TextView
                    android:id="@+id/textView55"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/browse_gardens"
                    android:textAlignment="center"
                    android:textColor="@color/contrast_green"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView55" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_assistant_own"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="50"
                android:background="@drawable/rounded_bg"
                android:backgroundTint="@color/white">

                <ImageView
                    android:id="@+id/imageView65"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_baseline_house_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/contrast_green" />

                <TextView
                    android:id="@+id/textView65"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/my_gardens"
                    android:textAlignment="center"
                    android:textColor="@color/contrast_green"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView65" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>